--- a/app_admin/views/web/news/add.phtml
+++ b/app_admin/views/web/news/add.phtml
@@ -68,16 +68,5 @@
 </table>
 </form>
 <div style="padding: 0 10px;" id="newsBody2" class="noDisplay">
-<table class="table_list">
-	<tr class="title">
-		<td width="150"><?php echo $Lang->_('web_news_preview');?></td>
-		<td><?php echo $Lang->_('web_news_url');?></td>
-		<td width="60"><?php echo $Lang->_('web_news_action');?></td>
-	</tr>
-	<tbody id="listBG">
-	<tr>
-		<td colspan="3"><?php echo $Lang->_('web_news_add_info');?><input type="hidden" id="NumIMG" value="0" /></td>
-	</tr>
-	</tbody>
-</table>
+	<div style="border: 1px dashed #dadcdf; background-color: #FFF; text-align: center; padding: 10px;"><?php echo $Lang->_('web_news_add_info');?></div>
 </div>
