--- a/app_admin/views/web/news/add.phtml
+++ b/app_admin/views/web/news/add.phtml
@@ -2,7 +2,7 @@
 <div id="TabName1" class="noDisplay"><?php echo $Lang->_('web_news_tab1');?></div>
 <div id="TabName2" class="noDisplay"><?php echo $Lang->_('web_news_tab2');?></div>
 <div id="TabName3" class="noDisplay"><?php echo $Lang->_('web_news_tab3');?></div>
-<form id="newsForm" action="<?php echo $this->url->get('WebNews/Data/save');?>" method="post">
+<form id="Form" action="<?php echo $this->url->get('WebNews/Data/add');?>" method="post">
 <table class="table_add">
 	<tbody id="newsBody0">
 	<tr>
