--- a/public/webmis/plugin/upload/dmuploader/dmuploader.webmis.css
+++ b/public/webmis/plugin/upload/dmuploader/dmuploader.webmis.css
@@ -3,11 +3,13 @@
 .WebMIS_Upload_input span{display: inline-block; cursor: pointer; background-color: #6FB737; color: #FFF; font-weight: bold; padding: 6px 20px; border-radius: 2px; box-shadow: 1px 1px 2px #666;}
 .WebMIS_Upload_input input{display: none;}
 .WebMIS_Upload_files{overflow: hidden; padding: 0 10px;}
-.WebMIS_Upload_files_ct{font-size: 12px; border: #DADCDF 1px solid; padding: 6px 10px; margin-bottom: 10px; box-shadow: 1px 1px 1px #F2F2F2;
+.WebMIS_Upload_files_ct{font-size: 12px; border: #DADCDF 1px solid; padding: 6px 10px 6px 40px; margin-bottom: 10px; box-shadow: 1px 1px 1px #F2F2F2;
 	background:-moz-linear-gradient(top, #FFF,#FEFEFE);
 	background:-webkit-gradient(linear, 0 0, 0 100%, from(#FFF), to(#F8F8F8));
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF,endColorstr=#F8F8F8,grandientType=1);
 }
+.WebMIS_Upload_files_img{float: left; width: 35px; height: 35px; line-height: 35px; margin: -3px 0 0 -38px; text-align: center; color: #6fb737; background-size: contain; background-repeat: no-repeat; background-position: center center;}
+.WebMIS_Upload_files_img span{width: 100%; height: 100%; background-color: #F2F2F2; border-radius: 60px; display: block;}
 .WebMIS_Upload_files_title{overflow: hidden; width: 100%; color: #999;}
 .WebMIS_Upload_files_title span{float: left; font-size: 10px;}
 .WebMIS_Upload_files_title span b{color: #666; font-size: 12px;}
