--- a/app_admin/views/help/system/index.phtml
+++ b/app_admin/views/help/system/index.phtml
@@ -1,1 +1,1 @@
-<?php print_r($Menus['Ctitle']);?>
+<iframe src="http://www.ksphp.com/docs/Phalcon" style="width: 100%; height: 100%; border: none;"></iframe>
