--- a/app_admin/views/system/menus/action/edit.phtml
+++ b/app_admin/views/system/menus/action/edit.phtml
@@ -1,4 +1,4 @@
-<form action="<?php echo $this->url->get('SysMenusAction/Data');?>" method="post" id="Form">
+<form action="<?php echo $this->url->get('SysMenusAction/Data/edit');?>" method="post" id="Form">
 <table class="table_add">
 	<tr>
 		<td class="tright" width="90"><?php echo $Lang->_('sys_menu_a_name');?>:</td>
