--- a/app_admin/views/welcome/desktop.phtml
+++ b/app_admin/views/welcome/desktop.phtml
@@ -1,2 +1,16 @@
-<?php echo $Menus['Ctitle'];?>
-
+<style type="text/css">
+.log_user{box-shadow: 0 0 2px #CCC; padding: 30px 20px; margin: 0 auto;}
+.log_user canvas{width: 100%; max-height: 320px;}
+</style>
+<table class="table_add">
+	<tr>
+		<td><h2>登陆日志</h2></td>
+	</tr>
+	<tr>
+		<td>
+			<div class="log_user">
+				<canvas id="myChart"></canvas>
+			</div>
+		</td>
+	</tr>
+</table>
