--- a/app_admin/views/welcome/desktop.phtml
+++ b/app_admin/views/welcome/desktop.phtml
@@ -1,6 +1,6 @@
 <style type="text/css">
 .log_user{box-shadow: 0 0 2px #CCC; padding: 30px 20px; margin: 0 auto;}
-.log_user canvas{width: 100%; max-height: 320px;}
+.log_user canvas{width: 100%; max-height: 360px;}
 </style>
 <table class="table_add">
 	<tr>
@@ -8,9 +8,7 @@
 	</tr>
 	<tr>
 		<td>
-			<div class="log_user">
-				<canvas id="myChart"></canvas>
-			</div>
+			<div class="log_user"><canvas id="myChart"></canvas></div>
 		</td>
 	</tr>
 </table>
