--- a/app_admin/views/welcome/desktop.phtml
+++ b/app_admin/views/welcome/desktop.phtml
@@ -4,7 +4,7 @@
 </style>
 <table class="table_add">
 	<tr>
-		<td><h2>登陆日志</h2></td>
+		<td><h2><?php echo $Lang->_('wel_desktop_log');?></h2></td>
 	</tr>
 	<tr>
 		<td>
