--- a/public/themes/admin/default/main.css
+++ b/public/themes/admin/default/main.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-/* 初始化 */
+/* Default */
 body,div,span,ul,li,table,tr,td,input,a,p,h1,h2,h3,h4,dl{margin: 0; padding: 0;}
 body,textarea{color: #333;}
 header,section,footer,aside{display: block;}
