--- a/public/themes/admin/default/main_m.css
+++ b/public/themes/admin/default/main_m.css
@@ -36,7 +36,7 @@ input:focus, textarea:focus{box-shadow: 0 0 6px rgba(153, 153, 153, 0.7);}
 .login_ct .login{width: 100%;}
 .login_ct .login .title{float: left; width: 80px; line-height: 25px; text-align: right; padding: 6px 0;}
 .login_ct .login .input_ct{line-height: 30px; padding: 6px 0 6px 80px;}
-.login_ct .login_input{border: none; width: 90%; height: 30px; line-height: 30px; padding: 0 5px; border: #222 1px solid; background-color: #DFE1E8;}
+.login_ct .login_input{border: none; width: 90%; height: 30px; line-height: 30px; padding: 0 5px; border: #222 1px solid; font-size: 1.5em; background-color: #DFE1E8;}
 .login_ct .sub{text-align: center; padding-top: 15px;}
 .login_ct .sub a{width: 92%; line-height: 42px; display: inline-block; background-color: #6FB737; color: #FFF; text-align: center; box-shadow: 1px 1px 2px #000; border-radius: 3px;}
 .login_ct .sub a:hover{background-color: #390;}
