--- a/app_admin/views/layouts/default/login_m.phtml
+++ b/app_admin/views/layouts/default/login_m.phtml
@@ -37,7 +37,7 @@
 	</div>
 	<div class="login_copy">
 		Copyright © <?php echo APP_COPY;?> All rights are reserved.<br>
-		<a href="<?php echo $this->url->get('../');?>" ><?php echo $incLang->_('inc_home');?></a> | <a href="?mode=pc" ><?php echo $incLang->_('inc_pc');?></a> | <a href="?mode=mobile" ><?php echo $incLang->_('inc_mobile');?></a>
+		<a href="<?php echo $this->url->get('../');?>" ><?php echo $incLang->_('inc_home');?></a> | <a href="<?php echo $this->url->get('?mode=pc');?>" ><?php echo $incLang->_('inc_pc');?></a> | <a href="<?php echo $this->url->get('?mode=mobile');?>" ><?php echo $incLang->_('inc_mobile');?></a>
 	</div>
 	
 <div id="base_url" style="display: none;"><?php echo $this->url->get();?></div>
