--- a/public/themes/admin/default/main_m.css
+++ b/public/themes/admin/default/main_m.css
@@ -43,3 +43,138 @@ input:focus, textarea:focus{box-shadow: 0 0 6px rgba(153, 153, 153, 0.7);}
 .login_copy{height: 50px; line-height: 20px; color: #CCC; text-align: center; padding: 15px 0; border-radius: 5px;}
 .login_copy a{color: #DFE1E8;}
 .login_copy a:hover{color: #FF6600;}
+
+/* Top */
+.top_user{position: fixed; top: 100%; width: 100%; height: 30px; margin-top: -30px; background-color: rgba(0,0,0,0.6);}
+.top_logo{float: left; width: 62px; height: 30px; background: url("images/logo.png") no-repeat; display: inline-block;}
+.top_link{position: absolute; z-index: 1; right: 0px; line-height: 30px; color: #FFF; padding: 0 10px;}
+.top_link a{color: #6FB737;}
+.top_link a:hover{color: #FF6600;}
+
+.nav_ct{width: 100%; position: absolute; z-index: 9; height: 42px; background: #3D3D3D; overflow: hidden; backface-visibility: hidden; box-shadow: 1px 1px 3px #666;}
+.nav{position: relative; top: 0px; width: 1600px; height: 42px; line-height: 42px; font-size: 14px;}
+.nav li{float: left; width: 64px; color: #FFF; text-align: center;}
+.nav li a{text-align: center; display: block; overflow: hidden;}
+.nav li em{font-size: 24px;}
+.nav .an1{color: #DFE1E8; background-color: #6FB737;}
+.nav .an1 em{color: #FFF;}
+.nav .an1 span{display: block;}
+.nav .an2{color: #CCC;}
+
+.left_menu{position: fixed; top: 100%; margin-top: -30px; padding: 5px 10px; box-shadow: 1px 1px 3px #999;
+	background:-moz-linear-gradient(top, #FFF,#E2E4E6);
+	background:-webkit-gradient(linear, 0 0, 0 100%, from(#FFF), to(#E2E4E6));
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF,endColorstr=#E2E4E6,grandientType=1);
+}
+.left_menu em{color: #6FB737; font-size: 1.5em; padding-right: 0; text-shadow: 1px 1px 0px #FFF;}
+
+.menu_ct{display: none; position: fixed; z-index: 10; top: 0px; width: 100%; height: 100%; background-color: rgba(0,0,0,0.8); overflow-y: auto; padding: 1em 0;}
+.menu_ct .title a{color: #38B000; font-weight: bold; padding: 0 1em;}
+.menu_ct .title a em{color: #38B000;}
+.menu_ct .list{font-size: 1.2em;}
+.menu_ct .list li{padding: 2px;}
+.menu_ct .list li a{color: #FFF; line-height: 2.2em; padding: 0 1em; display: block;}
+.menu_ct .list li a em{color: #FFF; padding-right: 5px;}
+
+.left_an1{background: #6FB737; color: #FFF; box-shadow: 0 0 2px #666;}
+.left_an1 em{color: #FFF;}
+.left_an2{color: #333;}
+.left_an2 em{color: #666;}
+
+/* Content */
+.ct_body{padding: 42px 0.2em 0.2em; background-color: #FFF; overflow: hidden;}
+.copy{line-height: 42px; color: #999; text-align: center; border-top: #CCC 1px solid;}
+
+/* Action */
+.action{line-height: 32px; display: inline-block; overflow: hidden; border: #DADCDF 1px solid; border-radius: 3px; box-shadow: 1px 1px 1px #EEE;
+	background:-moz-linear-gradient(top, #FFF,#F5F5F5);
+	background:-webkit-gradient(linear, 0 0, 0 100%, from(#FFF), to(#F5F5F5));
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF,endColorstr=#F5F5F5,grandientType=1);
+}
+.action .title{float: left; display: block; font-weight: bold; border-right: #DADCDF 1px solid; background-color: #FFF; color: #999; padding: 0 10px; box-shadow: 0 1px 0 #DADCDF;}
+.action a{float: left; padding: 0 8px; display: inline-block; overflow: hidden; color: #333;}
+.action a em{float: left; font-size: 14px; position: relative;}
+.action a span{float: left; padding-left: 5px;}
+.action a:hover{background-color: #6FB737; color: #FFF;}
+.action a:hover em{color: #FFF;}
+
+/* Checkbox */
+#checkboxY,#checkboxN{font-family: 'icomoon'; font-style: normal; font-weight: normal; font-size: 14px; color: #6FB737; padding: 2px 2px;}
+#checkboxN{display: none;}
+#checkboxY:before {content: "\e637";}
+#checkboxN:before {content: "\e636";}
+
+/* Page */
+.page{height: 60px; line-height: 60px; text-align: center; color: #999;}
+.page a,.page span{padding: 3px 5px; margin: 0 4px;}
+
+/* Table */
+.table_list{width: 100%; border-collapse: collapse; text-align: center; border-top: #6FB737 2px solid; background: #FFF; margin-top: 5px;}
+.table_list td{border-top: #DADCDF 1px solid; border-bottom: #DADCDF 1px solid; line-height: 20px; padding: 6px 5px;}
+.table_list .title{color: #999; background: #F8F8F8;}
+
+.table_add{width: 100%; border-collapse: collapse; margin: 5px 0;}
+.table_add td{line-height: 20px; padding: 5px;}
+.table_add .width{width: 90px;}
+.table_add .sub{padding-top: 15px;}
+.table_add h2{font-size: 14px; color: #666; padding: 5px 0; border-bottom: #DADCDF 1px solid;}
+.table_add h3{font-size: 12px; color: #999;}
+
+/* ICO */
+.ico-menus:before {content: "\e676";}
+.ico-qrcode:before {content: "\e608";}
+
+.ico-home:before {content: "\e620";}
+.ico-system:before {content: "\e621";}
+.ico-web:before {content: "\e62f";}
+.ico-logs:before {content: "\e606";}
+.ico-help:before {content: "\e663";}
+
+.ico-disktop:before {content: "\e612";}
+.ico-user:before {content: "\e61a";}
+.ico-user1:before {content: "\e61b";}
+.ico-pwd:before {content: "\e61d";}
+
+.ico-system1:before {content: "\e658";}
+.ico-system2:before {content: "\e622";}
+.ico-menu:before {content: "\e62a";}
+.ico-menuA:before {content: "\e637";}
+.ico-admin:before {content: "\e61a";}
+.ico-fileM:before {content: "\e677";}
+
+.ico-logs1:before {content: "\e605";}
+
+.ico-db:before {content: "\e62b";}
+
+.ico-list:before {content: "\e637";}
+.ico-search:before {content: "\e65e";}
+.ico-add:before {content: "\e670";}
+.ico-edit:before {content: "\e600";}
+.ico-del:before {content: "\e636";}
+.ico-audit:before {content: "\e61f";}
+.ico-chart:before {content: "\e623";}
+.ico-exp:before {content: "\e62c";}
+.ico-imp:before {content: "\e62d";}
+
+/* File */
+.ico-back:before {content: "\e65d";}
+.ico-addfolder:before {content: "\e65b";}
+.ico-addfile:before {content: "\e67d";}
+.ico-refresh:before {content: "\e664";}
+.ico-upload:before {content: "\e62d";}
+.ico-down:before {content: "\e62c";}
+.ico-fdel:before {content: "\e636";}
+
+.ico-folder:before {content: "\e65b";}
+.ico-file:before {content: "\e67d";}
+.ico-ico:before {content: "\e63e";}
+.ico-html:before {content: "\e649";}
+.ico-php:before {content: "\e649";}
+.ico-css:before {content: "\e64a";}
+.ico-img:before {content: "\e603";}
+.ico-pdf:before {content: "\e643";}
+.ico-zip:before {content: "\e647";}
+.ico-txt:before {content: "\e642";}
+.ico-doc:before {content: "\e645";}
+.ico-xls:before {content: "\e646";}
+.ico-odt:before {content: "\e644";}
