--- a/public/themes/admin/default/main_m.css
+++ b/public/themes/admin/default/main_m.css
@@ -61,12 +61,12 @@ input:focus, textarea:focus{box-shadow: 0 0 6px rgba(153, 153, 153, 0.7);}
 .nav .an1 span{display: block;}
 .nav .an2{color: #CCC;}
 
-.left_menu{position: fixed; top: 100%; margin-top: -36px; padding: 5px 10px; box-shadow: 1px 1px 3px #999;
+.left_menu{position: fixed; top: 100%; margin-top: -36px; width: 42px; height: 30px; padding-top: 6px; text-align: center; box-shadow: 1px 1px 3px #999;
 	background:-moz-linear-gradient(top, #FFF,#E2E4E6);
 	background:-webkit-gradient(linear, 0 0, 0 100%, from(#FFF), to(#E2E4E6));
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF,endColorstr=#E2E4E6,grandientType=1);
 }
-.left_menu em{color: #6FB737; font-size: 1.8em; padding-right: 0; text-shadow: 1px 1px 0px #FFF;}
+.left_menu em{color: #6FB737; font-size: 1.8em; text-shadow: 1px 1px 0px #FFF;}
 
 .menu_ct{display: none; position: fixed; z-index: 10; top: 0px; width: 100%; height: 100%; background-color: rgba(0,0,0,0.8); overflow-y: auto; padding: 1em 0;}
 .menu_ct .title a{color: #38B000; font-weight: bold; padding: 0 1em;}
