--- a/public/themes/admin/default/main_m.css
+++ b/public/themes/admin/default/main_m.css
@@ -51,7 +51,7 @@ input:focus, textarea:focus{box-shadow: 0 0 6px rgba(153, 153, 153, 0.7);}
 .top_link a{color: #6FB737;}
 .top_link a:hover{color: #FF6600;}
 
-.nav_ct{width: 100%; position: absolute; z-index: 9; height: 42px; background: #3D3D3D; overflow: hidden; backface-visibility: hidden; box-shadow: 1px 1px 3px #666;}
+.nav_ct{width: 100%; position: fixed; z-index: 9; height: 42px; background: #3D3D3D; overflow: hidden; backface-visibility: hidden; box-shadow: 1px 1px 3px #666;}
 .nav{position: relative; top: 0px; width: 1600px; height: 42px; line-height: 42px; font-size: 14px;}
 .nav li{float: left; width: 64px; color: #FFF; text-align: center;}
 .nav li a{text-align: center; display: block; overflow: hidden;}
