--- a/app_admin/views/layouts/default/main_m.phtml
+++ b/app_admin/views/layouts/default/main_m.phtml
@@ -59,8 +59,8 @@
 	</div>
 	<div class="copy">Copyright © <?php echo APP_COPY;?> All rights are reserved.<br></div>
 <div id="base_url" style="display: none;"><?php echo $this->url->get();?></div>
-<div id="IsMobile" style="display: none;"></div>
-<div id="getLang" style="display: none;"><?php echo @$_SESSION['Lang'];?></div>
+<div id="IsMobile" style="display: none;"><?php echo $this->session->get('IsMobile');?></div>
+<div id="getLang" style="display: none;"><?php echo $this->session->get('Lang');?></div>
 <div id="getUrl" style="display: none;"><?php echo @$getUrl;?></div>
 <?php $this->assets->outputJs(); ?>
 <?php if(@$LoadJS){ foreach($LoadJS as $val){
