--- a/app_admin/views/layouts/default/main.phtml
+++ b/app_admin/views/layouts/default/main.phtml
@@ -54,8 +54,8 @@
 		</div>
 	</div>
 <div id="base_url" style="display: none;"><?php echo $this->url->get();?></div>
-<div id="IsMobile" style="display: none;"></div>
-<div id="getLang" style="display: none;"><?php echo @$_SESSION['Lang'];?></div>
+<div id="IsMobile" style="display: none;"><?php echo $this->session->get('IsMobile');?></div>
+<div id="getLang" style="display: none;"><?php echo $this->session->get('Lang');?></div>
 <div id="getUrl" style="display: none;"><?php echo @$getUrl;?></div>
 <?php $this->assets->outputJs(); ?>
 <?php if(@$LoadJS){ foreach($LoadJS as $val){
