--- a/app_admin/views/help/system/index_m.phtml
+++ b/app_admin/views/help/system/index_m.phtml
@@ -1,1 +1,1 @@
-<iframe src="http://www.ksphp.com/docs/Phalcon" style="width: 100%; height: 100%; border: none;"></iframe>
+<iframe src="http://www.ksphp.com/docs/Phalcon" class="web_iframe" style="width: 100%; height: 100%; border: none;"></iframe>
