--- a/app_admin/views/web/index_m.phtml
+++ b/app_admin/views/web/index_m.phtml
@@ -1,1 +1,1 @@
-<iframe src="<?php echo $this->url->get('../');?>" style="width: 100%; height: 100%; border: none;"></iframe>
+<iframe src="<?php echo $this->url->get('../');?>" class="web_iframe" style="width: 100%; height: 100%; border: none;"></iframe>
