--- a/app_admin/views/layouts/default/login.phtml
+++ b/app_admin/views/layouts/default/login.phtml
@@ -35,7 +35,16 @@
 	</div>
 	<div class="login_copy">
 		Copyright © <?php echo APP_COPY;?> All rights are reserved.<br>
-		<a href="<?php echo $this->url->get('../');?>" ><?php echo $incLang->_('inc_home');?></a> | <a href="?mode=pc" ><?php echo $incLang->_('inc_pc');?></a> | <a href="?mode=mobile" ><?php echo $incLang->_('inc_mobile');?></a>
+		<a href="<?php echo $this->url->get('../');?>" ><?php echo $incLang->_('inc_home');?></a>&nbsp;|&nbsp;
+		<a href="<?php echo $this->url->get('?mode=pc');?>" ><?php echo $incLang->_('inc_pc');?></a>&nbsp;|&nbsp;
+		<a href="<?php echo $this->url->get('?mode=mobile');?>" id="QRCodeCT" class="qrcode">
+			<em class="ico-qrcode"></em>
+			<span><?php echo $incLang->_('inc_mobile');?></span>
+			<div class="qrcode_ct">
+				<div class="arrow"></div>
+				<div id="QRCode" class="ct"></div>
+			</div>
+		</a>
 	</div>
 <div id="base_url" style="display: none;"><?php echo $this->url->get();?></div>
 <div id="IsMobile" style="display: none;"><?php echo $this->session->get('IsMobile');?></div>
