--- a/app_m/views/layouts/default/main.phtml
+++ b/app_m/views/layouts/default/main.phtml
@@ -10,7 +10,7 @@
 	<meta  name="description"  content="DES"/>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 	<?php echo $this->tag->stylesheetLink("../webmis/themes/".WEBMIS_THEMES."/webmis.css");?>
-	<?php echo $this->tag->stylesheetLink("../themes/web/".APP_THEMES."/main.css");?>
+	<?php echo $this->tag->stylesheetLink("../themes/m/".APP_THEMES."/main.css");?>
 	<?php echo $this->tag->javascriptInclude("../webmis/plugin/jquery/".JQUERY_NAME);?>
 	<?php echo $this->tag->javascriptInclude("../webmis/jquery.webmis.js");?>
 	<?php echo $this->tag->javascriptInclude("../themes/m/".APP_THEMES."/main.js");?>
