--- a/app_web/views/index/index.phtml
+++ b/app_web/views/index/index.phtml
@@ -1,11 +1,11 @@
 <div class="in_body">
-	<a href="<?php echo $this->inc->BaseUrl();?>" class="logo">&nbsp;</a>
+	<a href="<?php echo $this->url->get();?>" class="logo">&nbsp;</a>
 	<div>
 		<a href="http://www.ksphp.com/">官方网站</a>&nbsp;|&nbsp;
 		<a href="https://github.com/ksphp/phalcon-webmis">开源项目</a>&nbsp;|&nbsp;
-		<a href="<?php echo $this->inc->BaseUrl('admin/');?>">管理后台</a>
+		<a href="<?php echo $this->url->get('admin');?>">管理后台</a>
 	</div>
 	<div>
-		Copyright © <a href="http://webmis.ksphp.com/admin" id="webmisVersion">ksphp.com</a> All Rights Reserved
+		Copyright © <a href="http://www.ksphp.com" id="webmisVersion">ksphp.com</a> All Rights Reserved
 	</div>
 </div>
