--- a/app_m/views/layouts/default/main.phtml
+++ b/app_m/views/layouts/default/main.phtml
@@ -8,21 +8,21 @@
 	<meta name="author" content="KSPHP" />
 	<meta name="keywords" content="KEY" />
 	<meta  name="description"  content="DES"/>
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-	<?php echo $this->tag->stylesheetLink("../webmis/themes/".WEBMIS_THEMES."/webmis.css");?>
-	<?php echo $this->tag->stylesheetLink("../themes/m/".APP_THEMES."/main.css");?>
-	<?php echo $this->tag->javascriptInclude("../webmis/plugin/jquery/".JQUERY_NAME);?>
-	<?php echo $this->tag->javascriptInclude("../webmis/jquery.webmis.js");?>
-	<?php echo $this->tag->javascriptInclude("../themes/m/".APP_THEMES."/main.js");?>
+	<link rel="shortcut icon" href="/themes/favicon.ico" type="image/x-icon" />
+	<?php echo $this->tag->stylesheetLink("/webmis/themes/".WEBMIS_THEMES."/webmis.css");?>
+	<?php echo $this->tag->stylesheetLink("/themes/m/".APP_THEMES."/main.css");?>
+	<?php echo $this->tag->javascriptInclude("/webmis/plugin/jquery/".JQUERY_NAME);?>
+	<?php echo $this->tag->javascriptInclude("/webmis/jquery.webmis.js");?>
+	<?php echo $this->tag->javascriptInclude("/themes/m/".APP_THEMES."/main.js");?>
 	<?php if(@$LoadCSS){ foreach($LoadCSS as $val){
-		echo $this->tag->stylesheetLink("../themes/m/".APP_THEMES."/css/".$val);
+		echo $this->tag->stylesheetLink("/themes/m/".APP_THEMES."/css/".$val);
 	}} ?>
 </head>
 <body class="body">
 <?php echo $this->getContent() ?>
 <div id="base_url" style="display: none;"><?php echo $this->inc->BaseUrl();?></div>
 <?php if(@$LoadJS){ foreach($LoadJS as $val){
-	echo $this->tag->javascriptInclude("../themes/m/".APP_THEMES."/js/".$val);
+	echo $this->tag->javascriptInclude("/themes/m/".APP_THEMES."/js/".$val);
 }} ?>
 </body>
 </html>
