--- a/app_admin/views/web/news/edit.phtml
+++ b/app_admin/views/web/news/edit.phtml
@@ -43,7 +43,7 @@
 	</tr>
 	<tr>
 		<td class="tright"><?php echo $Lang->_('web_news_summary');?>:</td>
-		<td><textarea name="summary" style="width: 95%; height: 120px;" maxlength="300"><?php echo $Edit->summary;?></textarea><span class="inputText c2">1~300<?php echo $Lang->_('inc_form_char');?></span></td>
+		<td><textarea name="summary" style="width: 95%; height: 120px;" maxlength="300"><?php echo $Edit->summary;?></textarea><span class="inputText c2">1~300<?php echo $incLang->_('inc_form_char');?></span></td>
 	</tr>
 	<tr>
 		<td class="tright"><?php echo $Lang->_('web_news_img');?>:</td>
