--- a/app_admin/views/layouts/default/main_m.phtml
+++ b/app_admin/views/layouts/default/main_m.phtml
@@ -7,7 +7,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="author" content="KSPHP" />
 	<title><?php echo APP_TITLE;?></title>
-	<link rel="shortcut icon" href="/themes/favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 	<?php echo $this->tag->stylesheetLink("/webmis/themes/".WEBMIS_THEMES."/webmis.css");?>
 	<?php echo $this->tag->stylesheetLink("/themes/admin/".APP_THEMES."/main_m.css");?>
 	<?php echo $this->tag->javascriptInclude("/webmis/plugin/jquery/".JQUERY_NAME);?>
