--- a/app_m/views/layouts/default/main.phtml
+++ b/app_m/views/layouts/default/main.phtml
@@ -8,7 +8,7 @@
 	<meta name="author" content="KSPHP" />
 	<meta name="keywords" content="KEY" />
 	<meta  name="description"  content="DES"/>
-	<link rel="shortcut icon" href="/themes/favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 	<?php echo $this->tag->stylesheetLink("/webmis/themes/".WEBMIS_THEMES."/webmis.css");?>
 	<?php echo $this->tag->stylesheetLink("/themes/m/".APP_THEMES."/main.css");?>
 	<?php echo $this->tag->javascriptInclude("/webmis/plugin/jquery/".JQUERY_NAME);?>
