--- a/app_admin/views/layouts/default/main.phtml
+++ b/app_admin/views/layouts/default/main.phtml
@@ -5,7 +5,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="KSPHP" />
 	<?php echo $this->tag->getTitle();?>
-	<link rel="shortcut icon" href="/themes/favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 	<?php echo $this->tag->stylesheetLink("/webmis/themes/".WEBMIS_THEMES."/webmis.css");?>
 	<?php echo $this->tag->stylesheetLink("/themes/admin/".APP_THEMES."/main.css");?>
 	<?php echo $this->tag->javascriptInclude("/webmis/plugin/jquery/".JQUERY_NAME);?>
