--- a/public/webmis/themes/default/webmis.css
+++ b/public/webmis/themes/default/webmis.css
@@ -28,17 +28,17 @@ em{color: #6FB737; font-family: 'icomoon'; speak: none; font-style: normal; font
 
 /* WebMisMsg */
 #WebMisWinBg{position: fixed; z-index:100; width: 100%; left: 0; top: 0; display: none; background-color: #000;}
-#WebMisWin{position: fixed; z-index:101; border: #333 1px solid; border-top: #6FB737 1px solid; background-color: #F8F8F8; margin: 0 auto; border-radius: 5px 5px 0 0; box-shadow: 0px 0px 8px #000;}
-.WebMisWin_top{cursor: all-scroll; height: 30px; line-height: 30px; border-bottom: #DDD 1px solid; padding: 0 5px; box-shadow: 0px 1px 0px #FFF;}
-.WebMisWin_top .title{float: left; font-size: 13px; font-weight: bold; color: #666; padding: 0 10px;}
-.WebMisWin_top .close{float: right; color: #999;}
+#WebMisWin{position: fixed; z-index:101; border: #FFF 1px solid; background-color: #F8F8F8; margin: 0 auto; box-shadow: 0px 0px 5px rgba(0,0,0,0.8);}
+.WebMisWin_top{cursor: all-scroll; height: 36px; line-height: 36px; border-bottom: #6FB737 1px solid;}
+.WebMisWin_top .title{float: left; font-size: 14px; color: #666; padding: 0 10px;}
+.WebMisWin_top .close{float: right; color: #999; height: 36px; padding: 0 6px; display: inline-block;}
 .WebMisWin_top .close em:hover{color: #FF6600;}
-.WebMisWin_top .close em:before {content: "\e660"; font-size: 18px;}
+.WebMisWin_top .close em:before {content: "\e660"; font-size: 21px;}
 .WebMisWin_ct{}
 .WebMisWin_ct .load{text-align: center;}
 .WebMisWin_ct .onLoad{padding: 5px 10px; background:url(images/onLoad.gif) no-repeat center center;}
 
-.WebMisTopMenu a{cursor: pointer; height: 20px; line-height: 20px; display: inline-block; margin: 9px 2px 0px 2px; padding: 0 10px; border-radius: 3px 3px 0 0;}
+.WebMisTopMenu a{cursor: pointer; height: 24px; line-height: 24px; display: inline-block; margin: 11px 1px 0px; padding: 0 15px; border-radius: 3px 3px 0 0;}
 .WebMisTopMenu .an1{border: #3F9707 1px solid; border-bottom: none; background-color: #6FB737; color: #FFF;}
 .WebMisTopMenu .an2{border: #CCC 1px solid; border-bottom: none; background-color: #F2F2F2; color: #333;}
 
@@ -82,7 +82,7 @@ em{color: #6FB737; font-family: 'icomoon'; speak: none; font-style: normal; font
 }
 
 /* Validform */
-.Validform_checktip{line-height: 30px; height: 30px; overflow:hidden; color:#999; font-size:12px; padding-left: 25px; display: none;}
+.Validform_checktip{overflow:hidden; color:#999; font-size:12px; padding-left: 25px; display: none;}
 .Validform_right{color:#71b83d; background:url(images/right.png) no-repeat 5px center; display: inline-block;}
 .Validform_wrong{color:red; white-space:nowrap; background:url(images/error.png) no-repeat 5px center; display: inline-block;}
 .Validform_loading{padding-left:20px; background:url(images/onLoad.gif) no-repeat left center;}
