--- a/public/webmis/plugin/upload/dmuploader/dmuploader.webmis.css
+++ b/public/webmis/plugin/upload/dmuploader/dmuploader.webmis.css
@@ -13,12 +13,14 @@
 .WebMIS_Upload_files_title{overflow: hidden; width: 100%; color: #999;}
 .WebMIS_Upload_files_title span{float: left; font-size: 10px;}
 .WebMIS_Upload_files_title span b{color: #666; font-size: 12px;}
-.WebMIS_Upload_files_title em{float: right; cursor: pointer; font-size: 16px;}
-.WebMIS_Upload_files_title em:before {content: "\e660";}
+.WebMIS_Upload_files_title em{float: right; cursor: pointer; font-size: 14px;}
+.WebMIS_Upload_files_title em:before {content: "\e6a9";}
 .WebMIS_Upload_files_load{overflow: hidden; height: 12px; background-color: #F2F2F2; box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1) inset;}
 @keyframes WebMIS_Upload_files_barBG{from{background-position:40px 0}to{background-position:0 0}}
+@-webkit-keyframes WebMIS_Upload_files_barBG{from{background-position:40px 0}to{background-position:0 0}}
 .WebMIS_Upload_files_bar{height: 12px; line-height: 12px; font-size: 12px; text-align: right; color: #FFF; background-color: #6FB737; box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1) inset;
 	background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
 	background-size: 40px 40px;
 	animation: WebMIS_Upload_files_barBG 2s linear infinite;
+	-webkit-animation: WebMIS_Upload_files_barBG 2s linear infinite;
 }
