--- a/public/webmis/plugin/slide/flexslider/flexslider.css
+++ b/public/webmis/plugin/slide/flexslider/flexslider.css
@@ -197,7 +197,7 @@ html[xmlns] .flexslider .slides {
 .flex-control-nav {
   width: 100%;
   position: absolute;
-  bottom: -5px;
+  bottom: 0;
   text-align: center;
 }
 .flex-control-nav li {
