--- a/public/webmis/themes/default/webmis.css
+++ b/public/webmis/themes/default/webmis.css
@@ -79,8 +79,8 @@ em{color: #6FB737; font-family: 'iconfont'; font-style: normal; font-size: 16px;
 }
 
 /* Validform */
-input.error {border: #FF6600 1px solid;}
-label.error{color: #FF6600; padding-left: 10px;}
-label.error em{padding-right: 2px;}
+input.error{border: #FF6600 1px solid;}
+label.error{color: #FF6600; padding-left: 3px; font-size: 12px;}
+label.error em{padding-left: 3px;}
 label.error em:before {color: #FF6600; content: "\e6a9"; font-size: 14px;}
 label.error.checked em:before {content: "\e6a4";}
